@@ -1,3 +1,12 @@
+2007-05-15  David Moore  <dcm@acm.org>
+
+	* libiptcdata/iptc-jpeg.c: Store APP13 section closer to the start of
+	the file, necessary for Picasa compatability.
+	* iptc/main.c: Don't set version and encoding by default since it hurts
+	Picasa compatability.  Added two options to set them manually.
+	* python/pyiptcdata.c: Don't set version and encoding by default.
+	* Documentation updates for these new recommendations
+
 2007-03-23  David Moore  <dcm@acm.org>
 
 	* NEWS, configure.in: Updated for release of 1.0.1
